# conami

./: README.md  pyproject.toml
data/: cadastro.csv  controle.csv
frontend/: main.py
